--- a/madlibs-vercel-sdk/package.json
+++ b/madlibs-vercel-sdk/package.json
@@ -14,6 +14,7 @@
     "next": "15.0.0-rc.1",
     "react": "19.0.0-rc-cd22717c-20241013",
     "react-dom": "19.0.0-rc-cd22717c-20241013",
+    "react-markdown": "^9.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
