--- a/madlibs-vercel-sdk/package.json
+++ b/madlibs-vercel-sdk/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.70",
-    "ai": "^3.4.29",
-    "next": "15.0.0-rc.1",
-    "react": "19.0.0-rc-cd22717c-20241013",
-    "react-dom": "19.0.0-rc-cd22717c-20241013",
+    "@ai-sdk/openai": "^0.0.72",
+    "ai": "^3.4.33",
+    "next": "15.0.3",
+    "react": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-markdown": "^9.0.1",
     "zod": "^3.23.8"
   },
